--- a/magento/manual-deploy-m2-live-dev-002.yml
+++ b/magento/manual-deploy-m2-live-dev-002.yml
@@ -1,4 +1,4 @@
-name: Manual Deploy m2-live-qa-001
+name: Manual Deploy m2-live-dev-002
 
 on:
   workflow_dispatch:
@@ -13,9 +13,9 @@ jobs:
       - name: Remove old build site
         uses: appleboy/ssh-action@master
         with:
-          host: ${{ secrets.M2_LIVE_QA_SSH_IP }}
-          username: ${{ secrets.M2_LIVE_QA_SSH_USER }}
-          key: ${{ secrets.M2_LIVE_QA_SSH_KEY }}
+          host: ${{ secrets.M2_LIVE_AWDEV_SSH_IP }}
+          username: ${{ secrets.M2_LIVE_AWDEV_SSH_USER }}
+          key: ${{ secrets.M2_LIVE_AWDEV_SSH_KEY }}
           script: |
             rm -rf /home/deploy/site/*
             find /home/deploy/site/ -maxdepth 1 -type f -name ".*" -delete
@@ -26,16 +26,16 @@ jobs:
           switches: --exclude=/vendor/ --exclude=/design/adminhtml/ --exclude=/autoload.php --exclude=/etc/db_schema.xml --exclude=/etc/di.xml --exclude=/etc/env.php --exclude=/etc/NonComposerComponentRegistration.php --exclude=/etc/registration_globlist.php --exclude=/etc/vendor_path.php --exclude=bootstrap.php --no-owner --no-group --delete -avh
           path: app/*
           remote_path: /home/deploy/site/app/
-          remote_host: ${{ secrets.M2_LIVE_QA_SSH_IP }}
-          remote_user: ${{ secrets.M2_LIVE_QA_SSH_USER }}
-          remote_key: ${{ secrets.M2_LIVE_QA_SSH_KEY }}
+          remote_host: ${{ secrets.M2_LIVE_AWDEV_SSH_IP }}
+          remote_user: ${{ secrets.M2_LIVE_AWDEV_SSH_USER }}
+          remote_key: ${{ secrets.M2_LIVE_AWDEV_SSH_KEY }}
 
       - name: Setup deploy permissions
         uses: appleboy/ssh-action@master
         with:
-          host: ${{ secrets.M2_LIVE_QA_SSH_IP }}
-          username: ${{ secrets.M2_LIVE_QA_SSH_USER }}
-          key: ${{ secrets.M2_LIVE_QA_SSH_KEY }}
+          host: ${{ secrets.M2_LIVE_AWDEV_SSH_IP }}
+          username: ${{ secrets.M2_LIVE_AWDEV_SSH_USER }}
+          key: ${{ secrets.M2_LIVE_AWDEV_SSH_KEY }}
           script: |
             sudo chown -R deploy:deploy /home/deploy/site/
             sudo chmod -R g+rw /home/deploy/site/
@@ -43,9 +43,9 @@ jobs:
       - name: Git update config files
         uses: appleboy/ssh-action@master
         with:
-          host: ${{ secrets.M2_LIVE_QA_SSH_IP }}
-          username: ${{ secrets.M2_LIVE_QA_SSH_USER }}
-          key: ${{ secrets.M2_LIVE_QA_SSH_KEY }}
+          host: ${{ secrets.M2_LIVE_AWDEV_SSH_IP }}
+          username: ${{ secrets.M2_LIVE_AWDEV_SSH_USER }}
+          key: ${{ secrets.M2_LIVE_AWDEV_SSH_KEY }}
           script: |
             cd /home/deploy/config/
             git pull
@@ -53,17 +53,17 @@ jobs:
       - name: Copy config files
         uses: appleboy/ssh-action@master
         with:
-          host: ${{ secrets.M2_LIVE_QA_SSH_IP }}
-          username: ${{ secrets.M2_LIVE_QA_SSH_USER }}
-          key: ${{ secrets.M2_LIVE_QA_SSH_KEY }}
+          host: ${{ secrets.M2_LIVE_AWDEV_SSH_IP }}
+          username: ${{ secrets.M2_LIVE_AWDEV_SSH_USER }}
+          key: ${{ secrets.M2_LIVE_AWDEV_SSH_KEY }}
           script: cp -r /home/deploy/config/* /home/deploy/site
 
       - name: Composer install & update
         uses: appleboy/ssh-action@master
         with:
-          host: ${{ secrets.M2_LIVE_QA_SSH_IP }}
-          username: ${{ secrets.M2_LIVE_QA_SSH_USER }}
-          key: ${{ secrets.M2_LIVE_QA_SSH_KEY }}
+          host: ${{ secrets.M2_LIVE_AWDEV_SSH_IP }}
+          username: ${{ secrets.M2_LIVE_AWDEV_SSH_USER }}
+          key: ${{ secrets.M2_LIVE_AWDEV_SSH_KEY }}
           script: |
             cd /home/deploy/site/
             composer install
@@ -71,9 +71,9 @@ jobs:
       - name: Setup magento
         uses: appleboy/ssh-action@master
         with:
-          host: ${{ secrets.M2_LIVE_QA_SSH_IP }}
-          username: ${{ secrets.M2_LIVE_QA_SSH_USER }}
-          key: ${{ secrets.M2_LIVE_QA_SSH_KEY }}
+          host: ${{ secrets.M2_LIVE_AWDEV_SSH_IP }}
+          username: ${{ secrets.M2_LIVE_AWDEV_SSH_USER }}
+          key: ${{ secrets.M2_LIVE_AWDEV_SSH_KEY }}
           script: |
             cd /home/deploy/site/
             bin/magento setup:upgrade
@@ -85,9 +85,9 @@ jobs:
       - name: Remove old magento site
         uses: appleboy/ssh-action@master
         with:
-          host: ${{ secrets.M2_LIVE_QA_SSH_IP }}
-          username: ${{ secrets.M2_LIVE_QA_SSH_USER }}
-          key: ${{ secrets.M2_LIVE_QA_SSH_KEY }}
+          host: ${{ secrets.M2_LIVE_AWDEV_SSH_IP }}
+          username: ${{ secrets.M2_LIVE_AWDEV_SSH_USER }}
+          key: ${{ secrets.M2_LIVE_AWDEV_SSH_KEY }}
           script: |
             sudo rm -rf /var/www/magento/*
             find /var/www/magento/ -maxdepth 1 -type f -name ".*" -delete
@@ -95,27 +95,27 @@ jobs:
       - name: Move to work directory
         uses: appleboy/ssh-action@master
         with:
-          host: ${{ secrets.M2_LIVE_QA_SSH_IP }}
-          username: ${{ secrets.M2_LIVE_QA_SSH_USER }}
-          key: ${{ secrets.M2_LIVE_QA_SSH_KEY }}
+          host: ${{ secrets.M2_LIVE_AWDEV_SSH_IP }}
+          username: ${{ secrets.M2_LIVE_AWDEV_SSH_USER }}
+          key: ${{ secrets.M2_LIVE_AWDEV_SSH_KEY }}
           script: sudo rsync -avzr --delete --exclude 'pub/media' --exclude 'var/log'  /home/deploy/site/* /var/www/magento/
 
       - name: Create Symbolic Links
         uses: appleboy/ssh-action@master
         with:
-          host: ${{ secrets.M2_LIVE_QA_SSH_IP }}
-          username: ${{ secrets.M2_LIVE_QA_SSH_USER }}
-          key: ${{ secrets.M2_LIVE_QA_SSH_KEY }}
+          host: ${{ secrets.M2_LIVE_AWDEV_SSH_IP }}
+          username: ${{ secrets.M2_LIVE_AWDEV_SSH_USER }}
+          key: ${{ secrets.M2_LIVE_AWDEV_SSH_KEY }}
           script: | 
-            sudo ln -s /var/www/data-center/m2-log/m2-live-qa-001 /var/www/magento/var/log
+            sudo ln -s /var/www/data-center/m2-log/m2-live-dev-002 /var/www/magento/var/log
             sudo ln -s /var/www/data-center/m2-media/m2-media-dev /var/www/magento/pub/media
 
       - name: Setup permissions 1
         uses: appleboy/ssh-action@master
         with:
-          host: ${{ secrets.M2_LIVE_QA_SSH_IP }}
-          username: ${{ secrets.M2_LIVE_QA_SSH_USER }}
-          key: ${{ secrets.M2_LIVE_QA_SSH_KEY }}
+          host: ${{ secrets.M2_LIVE_AWDEV_SSH_IP }}
+          username: ${{ secrets.M2_LIVE_AWDEV_SSH_USER }}
+          key: ${{ secrets.M2_LIVE_AWDEV_SSH_KEY }}
           script: |
             cd /var/www/magento/
             sudo find var generated vendor /var/www/magento/pub/static pub/media app/etc -type f -exec chmod g+w {} +
@@ -123,9 +123,9 @@ jobs:
       - name: Setup permissions 2
         uses: appleboy/ssh-action@master
         with:
-          host: ${{ secrets.M2_LIVE_QA_SSH_IP }}
-          username: ${{ secrets.M2_LIVE_QA_SSH_USER }}
-          key: ${{ secrets.M2_LIVE_QA_SSH_KEY }}
+          host: ${{ secrets.M2_LIVE_AWDEV_SSH_IP }}
+          username: ${{ secrets.M2_LIVE_AWDEV_SSH_USER }}
+          key: ${{ secrets.M2_LIVE_AWDEV_SSH_KEY }}
           script: |
             cd /var/www/magento/
             sudo find var generated vendor /var/www/magento/pub/static pub/media app/etc -type d -exec chmod g+ws {} +
@@ -133,9 +133,9 @@ jobs:
       - name: Setup permissions 3
         uses: appleboy/ssh-action@master
         with:
-          host: ${{ secrets.M2_LIVE_QA_SSH_IP }}
-          username: ${{ secrets.M2_LIVE_QA_SSH_USER }}
-          key: ${{ secrets.M2_LIVE_QA_SSH_KEY }}
+          host: ${{ secrets.M2_LIVE_AWDEV_SSH_IP }}
+          username: ${{ secrets.M2_LIVE_AWDEV_SSH_USER }}
+          key: ${{ secrets.M2_LIVE_AWDEV_SSH_KEY }}
           script: |
             cd /var/www/magento/
             sudo chown -R www-data:www-data /var/www/magento
@@ -143,9 +143,9 @@ jobs:
       - name: Setup permissions 4
         uses: appleboy/ssh-action@master
         with:
-          host: ${{ secrets.M2_LIVE_QA_SSH_IP }}
-          username: ${{ secrets.M2_LIVE_QA_SSH_USER }}
-          key: ${{ secrets.M2_LIVE_QA_SSH_KEY }}
+          host: ${{ secrets.M2_LIVE_AWDEV_SSH_IP }}
+          username: ${{ secrets.M2_LIVE_AWDEV_SSH_USER }}
+          key: ${{ secrets.M2_LIVE_AWDEV_SSH_KEY }}
           script: |
             cd /var/www/magento/
             sudo chmod u+x /var/www/magento/bin/magento
@@ -153,7 +153,7 @@ jobs:
     #   - name: Setup permissions 5
     #     uses: appleboy/ssh-action@master
     #     with:
-    #       host: ${{ secrets.M2_LIVE_TEST_SSH_IP }}
-    #       username: ${{ secrets.M2_LIVE_TEST_SSH_USER }}
-    #       key: ${{ secrets.M2_LIVE_TEST_SSH_KEY }}
+    #       host: ${{ secrets.M2_LIVE_AWDEV_SSH_IP }}
+    #       username: ${{ secrets.M2_LIVE_AWDEV_SSH_USER }}
+    #       key: ${{ secrets.M2_LIVE_AWDEV_SSH_KEY }}
     #       script: cd /var/www/ && sudo chown -R www-data:www-data /var/www/m2folders/
